* UTIL type=device | actions=actions=system-mgt-config_users - extend information for customer Rolebase
* UTIL type=system-log/traffic-log | optimisation of device timezone usage
* UTIL all merger scripts | introduce new argument actions=merge/display

BUGFIX:
* UTIL type=device | bugfix for actions=system-admin-session

GENERAL:
framework | optimise method PH::print_stdout()
framework | introduce PAN-OS device timezone - make use for this in type=device actions=system-admin-session


2.0.34 (20220408)
UTILS:
* UTIL API - introduce postman_collection
* UTIL type=device actions=display-shadowrule | improve JSON output
* UTIL develop - introduce create_template_mgmt_permittedips.php
* UTIL type=device | introduce actions=sp_spg-create-BP
* UTIL type=device | extend actions=sp_spg-create-BP:true/false,SP-NAME - with SP-NAME defined only the OUTBOUND profile is created with the defined SP-NAME
* UTIL optimise test_filter script for QA

BUGFIX:
* UTIL API - bugfix related to JSON output
* UTIL type=rule | bugfix 'filter=(rule is.unused.fast)' if searching via API mode on Panorama
* class PanAPIConnector | bugfix to avoid using shadow-apikeynohidden for PAN-OS >=9 if Panorama is used as proxy
* UTIL type=rule 'filter=(src has OBJECTNAME)' - fix if object does not exist at same DG level or above - filter is now returning false
* UTIL type=tag | bugfix for 'filter=(reflocation is shared )'

GENERAL:
* introduce UTIL actions test script
* framework | bugfixes for different CLASSES related to UTIL test_filter / test_action found issues


2.0.33 (20220404)
UTILS:
* UTIL type=address | introduce 'filter=(ip.count >,<,=! VALUE)' AND 'actions=move-range2network'
* UTIL bash-autocompletion | introduce argument "outputformatset="
* UTIL type=address | actions=exportToExcel:FILE.html - extend with ip.count value
* UTIL type=ALLMERGER | extend argument 'exportCSV' to 'exportCSV=FILE.html' which export the info into EXCEL / HTML format